解决硬编码的 file 协议导致跨平台问题（windows上无法加载插件） 插件请求分发控制器增加插件启用状态的判断